# FastCloud

./: .env  .gitignore  LICENSE  README.en.md  README.md  main.py  requirements.txt
alembic/: env.py
app/: config.py
app/api/v1/: controller.py  service.py
backend/: .env  README.md  banner.txt  main.py  pyproject.toml  requirements.txt
backend/app/alembic/: env.py
backend/app/api/v1/module_common/file/: schema.py
backend/app/api/v1/module_common/health/: controller.py
backend/app/api/v1/module_system/: __init__.py
backend/app/api/v1/module_system/auth/: controller.py  schema.py  service.py
backend/app/api/v1/module_system/dept/: crud.py
backend/app/api/v1/module_system/log/: crud.py  model.py  service.py
backend/app/api/v1/module_system/menu/: crud.py  schema.py  service.py
backend/app/api/v1/module_system/position/: crud.py  service.py
backend/app/api/v1/module_system/role/: crud.py
backend/app/api/v1/module_system/user/: crud.py  schema.py  service.py
backend/app/common/: enums.py  request.py
backend/app/config/: path_conf.py  setting.py
backend/app/core/: base_crud.py  base_model.py  database.py  dependencies.py  logger.py  middlewares.py  permission.py
backend/app/plugin/module_example/demo/: schema.py
backend/app/plugin/module_example/demo01/: schema.py
backend/app/scripts/: init_app.py  initialize.py
backend/app/scripts/data/: sys_dept.json  sys_menu.json
backend/app/utils/: banner.py  common_util.py  console.py  ip_local_util.py  xss_util.py
backend/sql/: fastcloud.db
backend/tests/: conftest.py  test_main.py
core/: base.py  database.py  dependencies.py  discovery.py  exceptions.py  http_client.py  logger.py  middlewares.py  response.py  security.py  startup.py
frontend/: .env.development  .env.production  README.md  package.json
frontend/src/: App.vue  main.ts  settings.ts
frontend/src/constants/: storage-keys.ts
frontend/src/store/: index.ts
frontend/src/types/: components.d.ts  env.d.ts  global.d.ts
services/admin/: main.py  requirements.txt  sqlite.db
services/admin/app/: router.py
services/admin/utils/: ai_client.py
services/gateway/: main.py  requirements.txt
services/gateway/app/: router.py
static/: index.html
static/assets/: dashboard-DdV6zqoy.js  detail-CvL0aYmE.js  index-DsgP5pz9.js  login-BasDiLNM.css  login-BkvrAyPt.js  user-B49y98gm.js
web/: .browserslistrc  .env.dev  .env.pro  .env.test  .gitignore  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: vite-env.d.ts
web/src/api/: user.ts
(+54 files in other folders)
